--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -639,7 +639,7 @@ msgstr ""
 #, python-format
 msgid ""
 "We don't know of any candidates standing yet. The official candidate list "
-"will be published by %(expected_sopn_date)s, when this page will be updated. "
+"will be published after %(expected_sopn_date)s, when this page will be updated. "
 "You can help improve this page:"
 msgstr ""
 
@@ -695,7 +695,7 @@ msgstr ""
 #: wcivf/apps/elections/templates/elections/includes/_single_ballot.html:129
 #, python-format
 msgid ""
-"The official candidate list will be published by %(expected_sopn_date)s, "
+"The official candidate list will be published after %(expected_sopn_date)s, "
 "when this page will be updated. You can help improve this page: <a "
 "href=\"%(ynr_link)s\"> add information about candidates to our database</a>."
 msgstr ""
